--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main></main>
     <footer></footer>
 
-    <script src="./app.js"></script>
+   <!--  <script src="./app.js"></script> -->
+   <script src="./apps.js"></script>
 </body>
 </html>
