--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <footer></footer>
 
    <!--  <script src="./app.js"></script> -->
-   <script src="./apps.js"></script>
+  <!--  <script src="./apps.js"></script> -->
+  <script src="./main.js"></script>
 </body>
 </html>
