--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.typekit.net/eoy0gzf.css">
      <!--     <link rel="stylesheet" href="../css/responCss.css" media="screen and (min-width: 768px)"> MediaQueries -->
-    <title>Javascript</title>
+    <link rel="stylesheet" href="./style.css">
+     <title>Javascript</title>
 </head>
 <body>
     <header>
         <nav></nav>
     </header>
-    <main></main>
+    <main>
+        <!-- <p>Player 1: Chris</p> -->
+    </main>
     <footer></footer>
 
    <!--  <script src="./app.js"></script> -->
