--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
 
    <!--  <script src="./app.js"></script> -->
   <!--  <script src="./apps.js"></script> -->
-  <script src="./main.js"></script>
+  <script src="./object.js"></script>
 </body>
 </html>
