--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </header>
     <main>
         <!-- <p>Player 1: Chris</p> -->
+       <!--  <button id="btn"></button> -->
     </main>
     <footer></footer>
 
