--- a/src/html/ecma.html
+++ b/src/html/ecma.html
@@ -16,6 +16,7 @@
 </head>
 <body>
     
-    <script src="../js/appEc.js"></script>
+    <script  src="../js/appEc.js"></script>
+    <script src="../js/modules.js"></script>
 </body>
 </html>
