--- a/src/html/ecma.html
+++ b/src/html/ecma.html
@@ -16,7 +16,9 @@
 </head>
 <body>
     
-    <script  src="../js/appEc.js"></script>
-    <script src="../js/modules.js"></script>
+    <!-- <script  src="../js/appEc.js"></script>
+    <script src="../js/modules.js"></script> -->
+    <!-- <script src="../js/ec7.js"></script> -->
+    <script src="../js/ec8.js"></script>
 </body>
 </html>
