--- a/src/html/ecma.html
+++ b/src/html/ecma.html
@@ -19,6 +19,7 @@
     <!-- <script  src="../js/appEc.js"></script>
     <script src="../js/modules.js"></script> -->
     <!-- <script src="../js/ec7.js"></script> -->
-    <script src="../js/ec8.js"></script>
+  <!--   <script src="../js/ec8.js"></script> -->
+  <script src="../js/ec9.js"></script>
 </body>
 </html>
