--- a/src/html/ecma.html
+++ b/src/html/ecma.html
@@ -20,6 +20,7 @@
     <script src="../js/modules.js"></script> -->
     <!-- <script src="../js/ec7.js"></script> -->
   <!--   <script src="../js/ec8.js"></script> -->
-  <script src="../js/ec9.js"></script>
+  <!-- <script src="../js/ec9.js"></script> -->
+  <script src="../js/ec10.js"></script>
 </body>
 </html>
